[workspace]
resolver = "2"
members = ["crates/*", "tests"]
default-members = ["crates/gammaloop-api"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
ahash = "0.8.8"
bincode = "2.0.0"
bincode-trait-derive = "0.1.1"
clap = "4.5.47"
colored = "3.0.0"
dot-parser = "0.5"
eyre = "0.6.12"
gammaloop-api = { path = "crates/gammaloop-api/" }
gammalooprs = { path = "crates/gammalooprs/" }
git-version = "0.3"
idenso = { path = "crates/idenso/" }
include_dir = "0.7"
itertools = "0.14"
linnest = { path = "crates/linnest/" }
linnet = { path = "crates/linnet/" }
nu-ansi-term = "0.50.3"
numpy = "0.28"
pyo3 = "0.28"
pyo3-build-config = "0.28"
pyo3-stub-gen = { version = "0.17", default-features = false }
pyo3-stub-gen-derive = { version = "0.17", default-features = false }
rand = "0.9"
ratatui = "0.30.0"
rayon = "1.5"
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1"
serde_repr = "0.1.19"
serde_yaml = "*"
smartstring = "*"
spenso = { path = "crates/spenso/" }
spenso-hep-lib = { path = "crates/spenso-hep-lib/" }
spenso-macros = { path = "crates/spenso-macros/" }
symbolica = { version = "1.4", default-features = false }
tabled = "0.20.0"
thiserror = "1.0.60"
toml = "0.9.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.13"
tracing-subscriber = "0.3.19"
typed-index-collections = "3.3.0"
vakint = { path = "crates/vakint/" }
vergen-gitcl = { version = "9", default-features = false }

[patch.crates-io]
graphica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }
numerica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }
symbolica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }

[profile.bench]
opt-level = 3
lto = "fat"

[profile.dev.package]
insta.opt-level = 3

[profile.release]
lto = "fat"

[profile.dev-optim]
inherits = "dev"
opt-level = 2
# lto=true

[profile.profiling]
inherits = "release"
opt-level = 3
debug = true
lto = "fat"
