[project]
name = "gammaloop"
version = "0.3.3"
description = "Gammaloop computes differential cross-sections using Local Unitarity"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Valentin Hirschi", email = "valentin.hirschi@gmail.com" },
  { name = "Mathijs Fraaije", email = "mathijsfraaije@gmail.com" },
  { name = "Lucien Huber", email = "mail@lcnbr.ch" },
]

keywords = ["collider", "cross-section", "loop", "perturbative", "physics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "PyMuPDF>=1.23.4",
  "jupyter>=1.1.1",
  "numpy>=2.3.3",
  "polars>=1.33.1",
  "pydot",
  "pytest",
  "pyyaml>=6.0.1",
  "symbolica>=0.14.0",
  "ufo-model-loader>=0.1.1",
]

[project.urls]
homepage = "https://alphaloop.ch"
repository = "https://github.com/alphal00p/gammaloop"

[dependency-groups]
dev = [
  "PyYAML>=6.0.1,<7",
  "black>=23.12.1,<24",
  "inline-snapshot>=0.21.2",
  "pytest>=8.3.5,<9",
  "symbolica>=0.16.0",
  "ufo-model-loader>=0.1.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python_abi"]
module-name = "gammaloop._gammaloop"
python-source = "crates/gammaloop-api/python"

[tool.mypy]
disable_error_code = "no-redef"
check_untyped_defs = true
exclude = [
  "python/gammaloop/data/templates/drawing/combine_pages.py",
  "python/gammaloop/data/models/*",
]

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydot.*"
ignore_missing_imports = true

[tool.pyright]
# reportPrivateImportUsage = "none"
# include = ["gamm/gammaloop"]

[tool.uv]
package = false
