[package]
name = "gammaloop-api"
version = "0.1.0"
edition = "2021"
authors = [
    "Valentin Hirschi <valentin.hirschi@gmail.com>",
    "Mathijs Fraaije <mathijsfraaije@gmail.com>",
    "Lucien Huber <mail@lcnbr.ch>",
]
categories = ["science"]
description = "An implementation of the Local Unitarity method for computing differential collider cross-sections."
keywords = ["loop", "cross-section", "perturbative", "physics"]
repository = "https://github.com/alphal00p/gammaloop"
build = "build.rs"


[lib]
name = "_gammaloop"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gammaloop"
path = "src/cli.rs"
# required-features = ["binary"]
bench = false


[dependencies]

spenso = { version = "0.5.4", features = ["shadowing"] }
clap = "4.5.47"
clap-repl = "0.3.2"
color-eyre = "0.6.5"
colored = "3.0.0"
console = "0.16.0"
dirs = "6.0.0"
eyre = { version = "0.6.12" }
gammalooprs = { path = "../", version = "0.3.3" }
pyo3-build-config = "0.26.0"
schemars = "1.0.4"
serde = "1.0.219"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "time",
    "json",
] }
tracing = { version = "0.1.41" }
symbolica = { version = "0.18.0", default-features = false }
bincode-trait-derive = { version = "0.1.1" }
bincode = { version = "2.0.0", features = ["serde"] }
# tracing-log = "0.2.0"
serde_json = "1"
toml = "0.9.5"
rand = { version = "0.9", features = ["small_rng"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-appender = "0.2.3"
serde_yaml = "*"
