[package]
name = "gammaloop-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
bincode = { version = "2.0.0", features = ["serde"] }
color-eyre = "0.6"
colored = "*"
eyre = "^0.6"
gammaloop_api = { package = "gammaloop-api", path = "../gammaloop-api" }
gammalooprs = { path = ".." }
insta = { version = "1.40.0", features = ["json", "ron", "serde", "toml"] }
itertools = "0.14"
momtrop = { version = "0.3.0" }
spenso = { version = "0.6", features = ["shadowing"] }
symbolica = { version = "1.3", default-features = false, features = [
  "bincode",
  "serde"
] }
tabled = { version = "0.20.0", features = ["ansi"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
vakint = "0.1.2"
which = "8.0.0"
