[package]
name = "gammaloop-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
python-api-tests = []

[lib]
path = "src/lib.rs"

[dependencies]
bincode = { workspace = true, features = ["serde"] }
color-eyre = "0.6"
colored = { workspace = true }
eyre = {workspace = true}
gammaloop-api = { workspace = true }
gammalooprs = { workspace = true }
insta = { workspace = true, features = ["json", "ron", "serde", "toml"] }
itertools = "0.14"
momtrop = { version = "0.3.0" }
spenso = { workspace = true, features = ["shadowing"] }
symbolica = { workspace = true, default-features = false, features = [
  "bincode",
  "serde"
] }
tabled = { version = "0.20.0", features = ["ansi"] }
toml = { workspace = true }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
vakint = {workspace=true}
which = { workspace = true }
serial_test = "3.2.0"
rand = { workspace = true, features = ["small_rng"] }
ndarray = "0.17"
serde_json = { workspace = true }

[build-dependencies]
cc = "1.1"

[[test]]
name = "test_python_api"
path = "tests/test_python_api.rs"
required-features = ["python-api-tests"]
