[package]
name = "clinnet"
version = "0.1.8"
edition = "2024"
description = "Incrementally render Typst figures from DOT graphs and assemble them into a grid PDF."
license = "MIT"
authors = ["Lucien Huber <lucien@alphaloop.ch>"]
repository = "https://github.com/lcnbr/linnet"
homepage = "https://github.com/lcnbr/linnet/tree/main/clinnet"
readme = "README.md"
keywords = ["typst", "graph", "dot", "pdf", "cli"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "linnet"
path = "src/main.rs"
[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
pathdiff = "0.2"
serde_json = "1.0"
walkdir = "2.5"
rust-embed = { version = "8.4", features = ["interpolate-folder-path"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
parking_lot = "0.12"
