[package]
name = "clinnet"
version = "0.1.8"
edition = "2024"
description = "Incrementally render Typst figures from DOT graphs and assemble them into a grid PDF."
readme = "README.md"
homepage = "https://github.com/lcnbr/linnet/tree/main/clinnet"
repository = "https://github.com/lcnbr/linnet"
license = "MIT"
keywords = ["cli", "dot", "graph", "pdf", "typst"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "linnet"
path = "src/main.rs"

[dependencies]
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
eyre = { workspace = true }
indicatif = { workspace = true }
parking_lot = "0.12"
pathdiff = "0.2"
rayon = "1.8"
rust-embed = { version = "8.4", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
