[package]
name = "gammaloop-api"
version = "0.1.0"
edition = "2021"

description = "An implementation of the Local Unitarity method for computing differential collider cross-sections."
repository = "https://github.com/alphal00p/gammaloop"
license = "MIT OR Apache-2.0"
keywords = ["cross-section", "loop", "perturbative", "physics"]
categories = ["science"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
bench = false
name = "gammaloop"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
ahash = { workspace = true, features = ["serde"] }
bincode = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["unstable-ext"] }
clap_complete = "4.5.57"
clap_complete_nushell = "4.5.10"
# clap-repl = "0.3.2"
color-eyre = { workspace = true }
colored = { workspace = true }
console = "0.16.3"
crossterm = "0.28.1"
dirs = { workspace = true }
eyre = { workspace = true }
figment = { version = "0.10.19", features = ["json", "toml"] }
gammaloop-tracing-filter = { workspace = true, features = ["clap"] }
gammalooprs = { workspace = true }
idenso = { workspace = true }
include_dir = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
json5 = { workspace = true }

ndarray = { workspace = true }
nu-ansi-term = { workspace = true }
numpy = { workspace = true, optional = true }
rand = { workspace = true, features = ["small_rng"] }
ratatui = { workspace = true, features = ["crossterm_0_28"] }
rayon = { workspace = true }
reedline = "0.42.0"
regex = { workspace = true }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = "1.3.0"
smartstring = { workspace = true, features = ["serde"] }
spenso = { workspace = true, features = ["shadowing"] }
# symbolica = { version = "0.18.0", default-features = false }
sysinfo = { workspace = true }
tabled = { workspace = true, features = ["ansi"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }

unicode-width = "0.2.2"
walkdir = { workspace = true }
gammaloop-workspace-hack = { version = "0.1", path = "../gammaloop-workspace-hack" }

[dependencies.linnet]
workspace = true
features = [
  "bincode",
  "serde",
  "symbolica",
]
# PyO3: optional for embedding. Auto-init at runtime.
[dependencies.pyo3]
workspace = true
# Stable ABI features are now feature-gated via python_abi feature
features = ["auto-initialize", "eyre"]
optional = true

[dependencies.symbolica]
workspace = true
default-features = false
features = [
  "bincode",
  "serde",
]

[dependencies.tracing-subscriber]
workspace = true
features = [
  "env-filter",
  "fmt",
  "json",
  "time",
]

[dependencies.typed-index-collections]
workspace = true
features = [
  "bincode",
  "serde",
  "serde-alloc",
]
[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
pyo3-build-config = { workspace = true, optional = true }
walkdir = { workspace = true }

[features]
# Keep Python optional unless explicitly enabled.
default = ["cli"]
cli = []
no_pyo3 = []
pyo3-extension-module = [
  "dep:pyo3",
  "gammalooprs/pyo3-extension-module",
  "pyo3/extension-module"
]
python_abi = ["pyo3/abi3", "pyo3/abi3-py37", "python_api"]
python_api = [
  "dep:numpy",
  "dep:pyo3-build-config",
  "gammaloop-tracing-filter/python_api",
  "gammalooprs/python_api",
  "ufo_support",
]
python_stubgen = ["python_api"]
ufo_support = ["dep:pyo3", "pyo3/auto-initialize"]
