[package]
name = "gammaloop-tracing-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry", "std"] }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry", "std"] }
